Add blog API routes for pagination and search functionality
- Introduced `GET` route for fetching paginated blog posts with filtering options including difficulty, sort order, and categories.
- Added a new `GET` route for searching blog posts based on a query string, supporting pagination.
- Updated blog filters component to handle new filtering logic and state management.
- Enhanced blog page to utilize new API routes for improved data fetching and user experience.
- Added support for related posts in individual blog post pages, enhancing content discoverability.
- Introduced support and donation options in the environment configuration for better user engagement.

--- a/env.example
+++ b/env.example
@@ -45,3 +45,14 @@ NEXT_PUBLIC_GISCUS_REPO=yourusername/yourrepo
 NEXT_PUBLIC_GISCUS_REPO_ID=your_repo_id
 NEXT_PUBLIC_GISCUS_CATEGORY=Blog Comments
 NEXT_PUBLIC_GISCUS_CATEGORY_ID=your_category_id
+
+# ===================
+# Support/Donations
+# ===================
+
+# Ko-fi username for donation button (get one at https://ko-fi.com)
+# The support button won't appear if this is not set
+NEXT_PUBLIC_KOFI_USERNAME=your_kofi_username
+
+# Optional: Buy Me a Coffee username (https://buymeacoffee.com)
+# NEXT_PUBLIC_BMC_USERNAME=your_bmc_username
